# predator-sense

./: .gitignore  README-ptbr.md  README.md
predator-sense-gui/: Cargo.toml  INSTALAR.sh  setup.sh
predator-sense-gui/installer/: i18n.go  main.go
predator-sense-gui/kernel/: BATTERY_MODELS.md  Makefile  facer.c
predator-sense-gui/resources/: style.css  tray_helper.py
predator-sense-gui/src/: config.rs  i18n.rs  main.rs  tray.rs
predator-sense-gui/src/hardware/: extras.rs  fan.rs  mod.rs  profile.rs  rgb.rs  sensors.rs  setup.rs
predator-sense-gui/src/ui/: battery_page.rs  fan_control_page.rs  fan_page.rs  gauge_widget.rs  gpu_page.rs  home_page.rs  mod.rs  monitor_page.rs  rgb_page.rs  setup_page.rs  window.rs
scripts/: remote-install.sh
