[package]
name = "predator-sense"
version = "0.2.1"
edition = "2021"
description = "Predator Sense for Linux - Hardware control for Acer gaming laptops"
license = "GPL-3.0"
authors = ["Cleyton"]

[dependencies]
gtk4 = "0.9"
libadwaita = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
